java: graphs and some cp solutions.